# nimbleship

./: CLAUDE.md  CONTEXT.md  README.md
api/: .gitignore  Dockerfile  alembic.ini  pyproject.toml
api/examples/: dachser.definition.json  fagans.definition.json  fedex.definition.json  furdeco.definition.json  palletforce.definition.json
api/migrations/: env.py
api/migrations/versions/: 1703c1c0b966_add_shipping_areas_and_postcode_areas_.py  27c1ab90344b_carrier_number_sequence_policy.py  2ee09eaf8a29_add_manifest_code_sequence_and_manifest_.py  35205bfdc77e_carrier_number_sequence_wrap_after.py  378dd6182211_carrier_number_sequences.py  3b8e5bb39b48_consignment_max_girth.py  42d22f45731a_delivery_propositions_catalogue.py  45d59f0a987e_service_groups_catalogue_and_.py  6ac56aaceb5c_phase_1_baseline_consignments_parcels_.py  729eaf162e6f_warehouses_collection_days_holidays_.py  7d481dc1ce8a_legacy_consignment_staging.py  94cc67866caa_add_tracking_events.py  9ee5e6bb66b4_consignment_records_the_bought_.py  a04754d2f808_add_warehouse_timezone.py  a9279f9d3d12_handoff_blockers.py  b77a4afd428c_carrier_definition_versions_and_carrier_.py  c41f7a9d2e58_manifests_and_the_job_queue.py  d1ecb9565af3_consignment_max_dimension.py  da02ffea2227_carrier_traffic_tracking_reference_.py
api/src/nimbleship/: __init__.py  barcodes.py  config.py  db.py  ftp_client.py  http_client.py  main.py  middleware.py  models.py  queue.py  shadow.py  uploaders.py
api/tests/: booking_race.py  conftest.py  render_support.py  test_allocate_prefix_resolution.py  test_allocation.py  test_assistant.py  test_assistant_api.py  test_barcodes.py  test_body_size_limit.py  test_booking_api.py  test_booking_traffic_invariant.py  test_carrier_builder.py  test_carrier_builder_api.py  test_carrier_definition.py  test_carriers_api.py  test_charges.py  test_collection_days.py  test_consignments_api.py  test_costs.py  test_dachser.py  test_dashboard_api.py  test_definitions_api.py  test_dropout_labels.py  test_engine_execute.py  test_engine_render.py  test_fagans_ftp_booking.py  test_fedex_definition.py  test_ftp_client.py  test_furdeco_definition.py  test_geography.py  test_health.py  test_label_store.py  test_labels_jpg.py  test_labels_png.py  test_legacy_dimensions.py  test_legacy_edge.py  test_legacy_girth.py  test_manifest_sending.py  test_manifests_api.py  test_migrations.py  (+18 more)
(+159 files in other folders)
